# NoahScore

./: .gitignore  CMakeLists.txt  build_noah.bat  main.dart  noah_bridge.cpp  predict_engine.py  구축 상태.txt
KnowledgeBase/: _https___git_scm_com_book_en_v2_Git_Internals_Git_Objects.txt  https___choosealicense_com_licenses_.txt  https___cli_github_com_manual_.txt  https___docs_docker_com_get_started_.txt  https___docs_github_com_en_actions.txt  https___docs_github_com_en_actions_automating_builds_and_tests_building_and_testing_java_with_gradle.txt  https___docs_github_com_en_copilot.txt  https___docs_github_com_en_get_started_using_github_github_flow.txt  https___docs_github_com_en_pull_requests_collaborating_with_pull_requests_reviewing_changes_in_pull_requests.txt  https___firebase_google_com_docs_flutter_setup.txt  https___git_scm_com_book_en_v2.txt  https___github_com_.txt  https___pandas_pydata_org_docs_getting_started_index_html.txt  https___scikit_learn_org_stable_getting_started_html.txt  https___www_analyticsfc_co_uk_blog_.txt  https___www_api_football_com_documentation_v3.txt  https___www_api_football_com_news_.txt  https___www_api_football_com_widgets_.txt  https___www_atlassian_com_git_tutorials_comparing_workflows.txt
build_asi/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Noah_ASI.sln  Noah_ASI.vcxproj  Noah_ASI.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build_log.txt  cmake_install.cmake
include/: gemini_client.hpp
lib/: ggml-base.lib  ggml-cuda.lib  ggml.lib  llama.lib  main.dart
src/: evolution_report.md  (+7 more)
(+24 files in other folders)
